--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -12,6 +12,12 @@ html(lang='en')
 
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
+        link(rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png")
+        link(rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png")
+        link(rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png")
+        link(rel="manifest" href="assets/site.webmanifest")
+        link(rel="mask-icon" href="assets/safari-pinned-tab.svg" color="#5bbad5")
+
         script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous")
         script(src="./js/scripts.js")
         include includes/css.pug
