--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -77,7 +77,7 @@ html(lang='en')
                     .row
                         .col-lg-4.col-sm-6.mb-5
                             .card.h-100.border-1.shadow-sm
-                                img.card-img-top(src='./assets/img/leden/Oosterholt.png')
+                                img.card-img-top(src='./assets/img/Leden/Oosterholt.png')
                                 .card-body.p-4
                                     h4.fw-bold.card-title.mb-3 Dhr. S.A.J. Oosterholt
                                     ul.fs-5.list-group.list-unstyled
@@ -86,7 +86,7 @@ html(lang='en')
                                         li Favoriete wijn: Pagus Bisano Amarone della Valpolicella 2018
                         .col-lg-4.col-sm-6.mb-5
                             .card.h-100.border-1.shadow-sm
-                                img.card-img-top(src='./assets/img/leden/Mokveld.jpg')
+                                img.card-img-top(src='./assets/img/Leden/Mokveld.jpg')
                                 .card-body.p-4
                                     h4.fw-bold.card-title.mb-3 Dhr. S.A. Mokveld
                                     ul.fs-5.list-group.list-unstyled
@@ -95,7 +95,7 @@ html(lang='en')
                                         li Favoriete wijn: Onbekend
                         .col-lg-4.col-sm-6.mb-5
                             .card.h-100.border-1.shadow-sm
-                                img.card-img-top(src='./assets/img/leden/Verkade.jpeg')
+                                img.card-img-top(src='./assets/img/Leden/Verkade.jpeg')
                                 .card-body.p-4
                                     h4.fw-bold.card-title.mb-3 Dhr. D.P. Verkade
                                     ul.fs-5.list-group.list-unstyled
@@ -413,7 +413,7 @@ html(lang='en')
 
 
             section#contact
-                .row
+                .row.justify-content-center
                     .col-lg-6
                         img.img-fluid(src='./assets/img/Cantus.png', alt='')
                 .container.px-4.my-5
