Added 2 new members and changed some pictures.

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -86,7 +86,7 @@ html(lang='en')
                                         li Favoriete wijn: Pagus Bisano Amarone della Valpolicella 2018
                         .col-lg-4.col-sm-6.mb-5
                             .card.h-100.border-1.shadow-sm
-                                img.card-img-top(src='./assets/img/Leden/Mokveld.jpg')
+                                img.card-img-top(src='./assets/img/Leden/Mokveld.jpeg')
                                 .card-body.p-4
                                     h4.fw-bold.card-title.mb-3 Dhr. S.A. Mokveld
                                     ul.fs-5.list-group.list-unstyled
@@ -248,9 +248,18 @@ html(lang='en')
 
                         .col-lg-4.col-sm-6.mb-5
                             .card.h-100.border-1.shadow-sm
+                                img.card-img-top(src='./assets/img/Leden/Henkemans.jpeg', alt='')
+                                .card-body.p-4
+                                    h4.fw-bold.card-title.mb-3 Dhr. B. Henkemans
+                                    ul.fs-5.list-group.list-unstyled
+                                        li Lid sedert oktober 2023
+                                        li Favoriete wijn: onbekend
+
+                        .col-lg-4.col-sm-6.mb-5
+                            .card.h-100.border-1.shadow-sm
                                 img.card-img-top(src='./assets/img/Leden/Horssen.png', alt='')
                                 .card-body.p-4
-                                    h4.fw-bold.card-title.mb-3 Dhr. C. van Horssen
+                                    h4.fw-bold.card-title.mb-3 Mgr. C. van Horssen
                                     ul.fs-5.list-group.list-unstyled
                                         li Lid sedert september 2016
                                         li Favoriete wijn: 2009 Chateau Margaux
@@ -281,6 +290,15 @@ html(lang='en')
                                     ul.fs-5.list-group.list-unstyled
                                         li Lid sedert februari 2011
                                         li Favoriete wijn: Havana Club 7
+
+                        .col-lg-4.col-sm-6.mb-5
+                            .card.h-100.border-1.shadow-sm
+                                img.card-img-top(src='./assets/img/Leden/Koster.jpeg', alt='')
+                                .card-body.p-4
+                                    h4.fw-bold.card-title.mb-3 Dhr. M.B. Koster
+                                    ul.fs-5.list-group.list-unstyled
+                                        li Lid sedert oktober 2023
+                                        li Favoriete wijn: Derrière la Roche, Vieilles Vignes 2018
 
                         .col-lg-4.col-sm-6.mb-5
                             .card.h-100.border-1.shadow-sm
