Fixed title on stukken.pug

--- a/src/pug/stukken.pug
+++ b/src/pug/stukken.pug
@@ -5,10 +5,10 @@ html(lang='en')
 
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
-        meta(name='description', content='')
-        meta(name='author', content='')
+        meta(name='description', content='Website van Hèt Dispuut "In Vino Veritas"')
+        meta(name='author', content='Praeses')
 
-        title Modern Business - Start Bootstrap Template
+        title Dispuut "In Vino Veritas"
 
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
