--- a/src/pug/stukken.pug
+++ b/src/pug/stukken.pug
@@ -31,63 +31,73 @@ html(lang='en')
                         h2#pakwijn Pakwijn
                         i Dispuut "In Vino Veritas"
                         br
-                        i [Verse 1]
-                        p Ik word geleefd door mijn agenda
-                        | Eet studiepunten als ontbijt
-                        | Maar terwijl ik droogjes uitvoer wat er van me wordt verwacht
-                        | Droom ik van de nachten waarin wijn me écht bevrijdt
+                        p i [Verse 1]
+                        p. 
+                          Ik word geleefd door mijn agenda
+                          Eet studiepunten als ontbijt
+                          Maar terwijl ik droogjes uitvoer wat er van me wordt verwacht
+                          Droom ik van de nachten waarin wijn me écht bevrijdt
                         br
-                        p Pronkend in mijn gilet rijd ik naar de TU/e
-                        | Daar wachten de Leeden van ‘t Dispuut I.V.V
-                        | We marcheren, galopperen, door de markthal
-                        | De feut die huppelt mee
+                        p.
+                          Pronkend in mijn gilet rijd ik naar de TU/e
+                          Daar wachten de Leeden van ‘t Dispuut I.V.V
+                          We marcheren, galopperen, door de markthal
+                          De feut die huppelt mee
                         br 
-                        i [Refrein]
+                        p i [Refrein]
                         br 
-                        p Pakwijn trek ik leeg, ik besef meteen
-                        | Ik zoek m’n grenzen op, en ga erover heen
-                        | Schenk nog maar een wijntje in mijn lege glas,
-                        | Dan ben ik weer in mijn sas, met In Vino Veritas
+                        p.
+                          Pakwijn trek ik leeg, ik besef meteen
+                          Ik zoek m’n grenzen op, en ga erover heen
+                          Schenk nog maar een wijntje in mijn lege glas,
+                          Dan ben ik weer in mijn sas, met In Vino Veritas
                         br
-                        i [Verse 2]
+                        p i [Verse 2]
                         br 
-                        p Het wijnglas zit tussen m’n lippen
-                        | En dat is precies waar het moet zijn
-                        | Een onafgebroken slok, met onze P als kapitein
-                        | Prominent de maatstaf, en GEWIS als het domein
+                        p.
+                          Het wijnglas zit tussen m’n lippen
+                          En dat is precies waar het moet zijn
+                          Een onafgebroken slok, met onze P als kapitein
+                          Prominent de maatstaf, en GEWIS als het domein
                         br 
-                        p Sterk en zelfverzekerd, naar een borrel die ik leid
-                        | Aan de bar wacht de Heer Houthuijs, de Praeses die ik bemijd
-                        | Samen drinken we de zon achter de sterren
-                        | De wijnfles lacht naar mij
+                        p.
+                          Sterk en zelfverzekerd, naar een borrel die ik leid
+                          Aan de bar wacht de Heer Houthuijs, de Praeses die ik bemijd
+                          Samen drinken we de zon achter de sterren
+                          De wijnfles lacht naar mij
                         br 
-                        i [Refrein]
+                        p i [Refrein]
                         br 
-                        p Pakwijn trek ik leeg, ik besef meteen
-                        | Ik zoek m’n grenzen op, en ga erover heen
-                        | Schenk nog maar een wijntje in mijn lege glas,
-                        | Dan ben ik weer in mijn sas, met In Vino Veritas
+                        p.
+                          Pakwijn trek ik leeg, ik besef meteen
+                          Ik zoek m’n grenzen op, en ga erover heen
+                          Schenk nog maar een wijntje in mijn lege glas,
+                          Dan ben ik weer in mijn sas, met In Vino Veritas
                         br
-                        p Pakwijn trek ik leeg, ik besef meteen
-                        | Ik zoek m’n grenzen op, en ga erover heen
-                        | Schenk nog maar een wijntje in mijn lege glas,
-                        | Dan ben ik weer in mijn sas, met In Vino Veritas
+                        p.
+                          Pakwijn trek ik leeg, ik besef meteen
+                          Ik zoek m’n grenzen op, en ga erover heen
+                          Schenk nog maar een wijntje in mijn lege glas,
+                          Dan ben ik weer in mijn sas, met In Vino Veritas
                         br
-                        i [Bridge]
+                        p i [Bridge]
                         br
-                        i (3x)
-                        p Jalalalala lalalalalala
-                        | Jalalalalala jalalalalalala
+                        p i (3x)
+                        p.
+                          Jalalalala lalalalalala
+                          Jalalalalala jalalalalalala
                         br
-                        i [Refrein]
+                        p i [Refrein]
                         br 
-                        p Pakwijn trek ik leeg, ik besef meteen
-                        | Ik zoek m’n grenzen op, en ga erover heen
-                        | Schenk nog maar een wijntje in mijn lege glas,
-                        | Dan ben ik weer in mijn sas, met In Vino Veritas
-                        i [Outro]
-                        p Voor je het weet is het weer dag
-                        | Dus drink ik met een lach, de nacht
+                        p.
+                          Pakwijn trek ik leeg, ik besef meteen
+                          Ik zoek m’n grenzen op, en ga erover heen
+                          Schenk nog maar een wijntje in mijn lege glas,
+                          Dan ben ik weer in mijn sas, met In Vino Veritas
+                        p i [Outro]
+                        p.
+                          Voor je het weet is het weer dag
+                          Dus drink ik met een lach, de nacht
                         h2#servetetiquette De Servetetiquette
                         i Mgr. T.R.T. Nijhuis, Dispuut "In Vino Veritas"
                         br
