--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -480,7 +480,7 @@ html(lang='en')
                                 br
                                 | Postbus 513
                                 br
-                                | 5600 MB Eindhove
+                                | 5600 MB Eindhoven
 
         // Footer
         include includes/footer.pug
