--- a/src/pug/stukken.pug
+++ b/src/pug/stukken.pug
@@ -44,14 +44,14 @@ html(lang='en')
                         p
                           | Pronkend in mijn gilet rijd ik naar de TU/e
                           br
-                          | Daar wachten de Leeden van ‘t Dispuut I.V.V.
+                          | Daar wachten de Leeden van ‘t Dispuut I.V.V
                           br
                           | We marcheren, galopperen, door de markthal
                           br
                           | De feut die huppelt mee
-                        br 
+                        br
                         p.i [Refrein]
-                        br 
+                        br
                         p
                           | Pakwijn trek ik leeg, ik besef meteen
                           br
@@ -62,7 +62,7 @@ html(lang='en')
                           | Dan ben ik weer in mijn sas, met In Vino Veritas
                         br
                         p.i [Verse 2]
-                        br 
+                        br
                         p
                           | Het wijnglas zit tussen m’n lippen
                           br
@@ -71,7 +71,7 @@ html(lang='en')
                           | Een onafgebroken slok, met onze P als kapitein
                           br
                           | Prominent de maatstaf, en GEWIS als het domein
-                        br 
+                        br
                         p
                           | Sterk en zelfverzekerd, naar een borrel die ik leid
                           br
@@ -80,9 +80,9 @@ html(lang='en')
                           | Samen drinken we de zon achter de sterren
                           br
                           | De wijnfles lacht naar mij
-                        br 
+                        br
                         p.i [Refrein]
-                        br 
+                        br
                         p
                           | Pakwijn trek ik leeg, ik besef meteen
                           br
@@ -110,7 +110,7 @@ html(lang='en')
                           | Jalalalalala jalalalalalala
                         br
                         p.i [Refrein]
-                        br 
+                        br
                         p
                           | Pakwijn trek ik leeg, ik besef meteen
                           br
