--- a/src/pug/includes/navbar.pug
+++ b/src/pug/includes/navbar.pug
@@ -10,6 +10,8 @@ nav.navbar.navbar-expand-lg.navbar-dark.red-bg.sticky-top
             ul.navbar-nav.ms-auto.mb-2.mb-lg-0
                 li.nav-item
                     a.nav-link(href='index.html#leden') Leden
+                li.nav-item
+                    a.nav-link(href='coup.html') Coup
                 li.nav-item.dropdown
                     a#navbarDropdownBlog.nav-link.dropdown-toggle(href='#', role='button', data-bs-toggle='dropdown', aria-expanded='false')
                         | Stukken
