Switched to parcel

--- a/src/coup.pug
+++ b/src/coup.pug
@@ -13,14 +13,14 @@ html(lang='en')
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
 
-        include includes/css.pug
+        include includes/css
 
     body.d-flex.flex-column
 
         main.flex-shrink-0
 
             // Navigation
-            include includes/navbar.pug
+            include includes/navbar
 
             // Page Content
             section.pb-5
@@ -39,6 +39,6 @@ html(lang='en')
 
 
         // Footer
-        include includes/footer.pug
+        include includes/footer
 
-        include includes/scripts.pug
+        include includes/scripts
