--- a/src/includes/navbar.pug
+++ b/src/includes/navbar.pug
@@ -1,6 +1,6 @@
 nav.navbar.navbar-expand-lg.navbar-dark.red-bg.sticky-top
     .container.px-5
-        a.navbar-brand(href='index.html')
+        a.navbar-brand(href='index.pug')
             div.d-flex.align-items-center
                 img(src='./assets/wapenzonderachtergrond.png', alt="I.V.V", height='40px', width='36px').me-3
                 p.m-0.fw-bold In Vino Veritas
@@ -9,24 +9,24 @@ nav.navbar.navbar-expand-lg.navbar-dark.red-bg.sticky-top
         #navbarSupportedContent.collapse.navbar-collapse
             ul.navbar-nav.ms-auto.mb-2.mb-lg-0
                 li.nav-item
-                    a.nav-link(href='index.html#leden') Leden
+                    a.nav-link(href='index.pug#leden') Leden
                 li.nav-item
-                    a.nav-link(href='coup.html') Coup
+                    a.nav-link(href='coup.pug') Coup
                 li.nav-item.dropdown
                     a#navbarDropdownBlog.nav-link.dropdown-toggle(href='#', role='button', data-bs-toggle='dropdown', aria-expanded='false')
                         | Stukken
                     ul.dropdown-menu.dropdown-menu-end(aria-labelledby='navbarDropdownBlog')
                         li
-                            a.dropdown-item(href='stukken.html#servetetiquette') De Servetetiquette
+                            a.dropdown-item(href='./stukken.pug#servetetiquette') De Servetetiquette
                         li
-                            a.dropdown-item(href='stukken.html#wijn') Wijn in de mythologie en de oudheid
+                            a.dropdown-item(href='./stukken.pug#wijn') Wijn in de mythologie en de oudheid
                         li
-                            a.dropdown-item(href='stukken.html#kurk') Kurk: een bloemlezing
+                            a.dropdown-item(href='./stukken.pug#kurk') Kurk: een bloemlezing
                         li
-                            a.dropdown-item(href='stukken.html#panta') Panta Rei
+                            a.dropdown-item(href='./stukken.pug#panta') Panta Rei
                         li
-                            a.dropdown-item(href='stukken.html#proostlied') Proostlied der I.V.V
+                            a.dropdown-item(href='./stukken.pug#proostlied') Proostlied der I.V.V
                         li
-                            a.dropdown-item(href='stukken.html#statieportret') Statieportret
+                            a.dropdown-item(href='./stukken.pug#statieportret') Statieportret
                 li.nav-item
-                    a.nav-link(href='index.html#contact') Contact
+                    a.nav-link(href='index.pug#contact') Contact
