--- a/src/stukken.pug
+++ b/src/stukken.pug
@@ -13,14 +13,14 @@ html(lang='en')
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
 
-        include includes/css.pug
+        include includes/css
 
     body.d-flex.flex-column
 
         main.flex-shrink-0
 
             // Navigation
-            include includes/navbar.pug
+            include includes/navbar
 
             // Page Content
             section.pb-5
@@ -201,9 +201,9 @@ html(lang='en')
                         h2#statieportret Statieportret
                         i Dispuut "In Vino Veritas"
                         br
-                        img.img-fluid(src='./assets/img/statieportretten/statieportret.png', alt='Statieportret Dispuut "In Vino Veritas"')
+                        img.img-fluid(src='assets/img/statieportretten/statieportret.png', alt='Statieportret Dispuut "In Vino Veritas"')
 
         // Footer
-        include includes/footer.pug
+        include includes/footer
 
-        include includes/scripts.pug
+        include includes/scripts
