Removed coup.pug en functie wisselingen.

--- a/src/index.pug
+++ b/src/index.pug
@@ -102,13 +102,25 @@ html(lang='en')
                                         li Ab-Actis
                                         li Lid sedert december 2022
                                         li Favoriete wijn: Onbekend
+
+
+                        .col-lg-4.col-sm-6.mb-5
+                            .card.h-100.border-1.shadow-sm
+                                img.card-img-top(src='./assets/img/Leden/Henkemans.jpeg', alt='')
+                                .card-body.p-4
+                                    h4.fw-bold.card-title.mb-3 Dhr. B. Henkemans
+                                    ul.fs-5.list-group.list-unstyled
+                                        li Quaestor
+                                        li Lid sedert oktober 2023
+                                        li Favoriete wijn: onbekend
+
                         .col-lg-4.col-sm-6.mb-5
                             .card.h-100.border-1.shadow-sm
                                 img.card-img-top(src='./assets/img/Leden/Verkade.jpeg')
                                 .card-body.p-4
                                     h4.fw-bold.card-title.mb-3 Dhr. D.P. Verkade
                                     ul.fs-5.list-group.list-unstyled
-                                        li Quaestor, tevens Vice-Praeses, tevens Proclamator, tevens Kelner, tevens Homines-Attributes
+                                        li Vice-Praeses, tevens Proclamator, tevens Kelner, tevens Homines-Attributes
                                         li Lid sedert november 2021
                                         li Favoriete wijn: Graham's Late Bottled Vintage Port
 
@@ -262,15 +274,6 @@ html(lang='en')
                                     ul.fs-5.list-group.list-unstyled
                                         li Lid sedert juni 2009
                                         li Favoriete wijn: Onbekend
-
-                        .col-lg-4.col-sm-6.mb-5
-                            .card.h-100.border-1.shadow-sm
-                                img.card-img-top(src='./assets/img/Leden/Henkemans.jpeg', alt='')
-                                .card-body.p-4
-                                    h4.fw-bold.card-title.mb-3 Dhr. B. Henkemans
-                                    ul.fs-5.list-group.list-unstyled
-                                        li Lid sedert oktober 2023
-                                        li Favoriete wijn: onbekend
 
                         .col-lg-4.col-sm-6.mb-5
                             .card.h-100.border-1.shadow-sm
