Namen en functiewissel

--- a/src/portretten.pug
+++ b/src/portretten.pug
@@ -46,14 +46,14 @@ html(lang='en')
                         .col-lg-6
                             img.img-fluid.rounded(width='620px', src='./assets/img/statieportretten/Statieportret2013.png', alt='Statieportret')
                         .col-lg-6
-                            h3.fw-bold.mb-3 Praeses ? et al. AD 2013
-                            .fs-5.mb-4.fst-italic v.l.n.r: ?
+                            h3.fw-bold.mb-3 Praeses van Beekveld et al. AD 2013
+                            .fs-5.mb-4.fst-italic v.l.n.r: Beckers, Ceelen, Schepens, Roobeek, Kerstens, Godtschalk, Zwerts, Timmerman, Verheijen, Fasting, van Zelst, Sanders, Aerts, Nijhuis, Meeles, van Beekveld, Keltjens, van Thiel, Wong
                     .row.pb-5
                         .col-lg-6
                             img.img-fluid.rounded(width='620px', src='./assets/img/statieportretten/statieportret.png', alt='Statieportret')
                         .col-lg-6
-                            h3.fw-bold.mb-3 Praeses ? et al. AD ?
-                            .fs-5.mb-4.fst-italic v.l.n.r: ?
+                            h3.fw-bold.mb-3 Praeses Aerts et al. AD 2008
+                            .fs-5.mb-4.fst-italic v.l.n.r: Nijhuis, Roobeek, Verheijen, Timmerman, van Thiel, Aerts, Wong, Zwerts, Sanders
         include includes/footer
 
         include includes/scripts
