--- a/src/portretten.pug
+++ b/src/portretten.pug
@@ -44,6 +44,12 @@ html(lang='en')
                             .fs-5.mb-4.fst-italic v.l.n.r: Maes, Meeles, Damhuis, Meijaard, van Veenendaal, Schepens, Janssen & van Horssen
                     .row.pb-5
                         .col-lg-6
+                            img.img-fluid.rounded(width='620px', src='./assets/img/statieportretten/Statieportret2017.jpeg', alt='Statieportret')
+                        .col-lg-6
+                            h3.fw-bold.mb-3 Praeses Meeles et al. AD 2017
+                            .fs-5.mb-4.fst-italic v.l.n.r: van Veenendaal, Keltjes, Beekveld, Meeles, Janssen, Schepens, Damhuis & van Horssen
+                    .row.pb-5
+                        .col-lg-6
                             img.img-fluid.rounded(width='620px', src='./assets/img/statieportretten/Statieportret2013.png', alt='Statieportret')
                         .col-lg-6
                             h3.fw-bold.mb-3 Praeses van Beekveld et al. AD 2013
