--- a/src/index.pug
+++ b/src/index.pug
@@ -99,7 +99,7 @@ html(lang='en')
                                 .card-body.p-4
                                     h4.fw-bold.card-title.mb-3 Dhr. S.A. Mokveld
                                     ul.fs-5.list-group.list-unstyled
-                                        li Ab-Actis
+                                        li Ab-Actis, tevens Dux Luxuriae
                                         li Lid sedert december 2022
                                         li Favoriete wijn: Onbekend
 
@@ -136,18 +136,6 @@ html(lang='en')
                                         li Lid sedert december 2019
                                         li Favoriete wijn: 2018 Emilio Moro Malleolus Melchior
                                         p.fst-italic.mt-3.text-center "Als de Ab-Actis moet pissen, dan moet de Ab-Actis pissen."
-
-
-                        .col-lg-4.col-sm-6.mb-5
-                            .card.h-100.border-1.shadow-sm
-                                img.card-img-top(src='./assets/img/Leden/Damhuis.png', alt='')
-                                .card-body.p-4
-                                    h4.fw-bold.card-title.mb-3 Mgr. L.R.J. Damhuis
-                                    ul.fs-5.list-group.list-unstyled
-                                        li Dux Luxuriae
-                                        li Lid sedert april 2015
-                                        li Favoriete wijn: Whale's Tale Sauvignon Blanc
-                                        p.fst-italic.mt-3.text-center "Als één hert over De Dam is, volgen er meer!"
 
                         .col-lg-4.col-sm-6.mb-5
                             .card.h-100.border-1.shadow-sm
@@ -227,6 +215,16 @@ html(lang='en')
                                     ul.fs-5.list-group.list-unstyled
                                         li Lid sedert december 2003
                                         li Favoriete wijn: Onbekend
+
+                        .col-lg-4.col-sm-6.mb-5
+                            .card.h-100.border-1.shadow-sm
+                                img.card-img-top(src='./assets/img/Leden/Damhuis.png', alt='')
+                                .card-body.p-4
+                                    h4.fw-bold.card-title.mb-3 Mgr. L.R.J. Damhuis
+                                    ul.fs-5.list-group.list-unstyled
+                                        li Lid sedert april 2015
+                                        li Favoriete wijn: Whale's Tale Sauvignon Blanc
+                                        p.fst-italic.mt-3.text-center "Als één hert over De Dam is, volgen er meer!"
 
                         .col-lg-4.col-sm-6.mb-5
                             .card.h-100.border-1.shadow-sm
@@ -365,6 +363,15 @@ html(lang='en')
                                     ul.fs-5.list-group.list-unstyled
                                         li Lid sedert mei 2008
                                         li Favoriete wijn: Onbekend
+
+                        .col-lg-4.col-sm-6.mb-5
+                            .card.h-100.border-1.shadow-sm
+                                img.card-img-top(src='./assets/img/Leden/Peters.jpg', alt='')
+                                .card-body.p-4
+                                    h4.fw-bold.card-title.mb-3 Dhr. J.L. Peters
+                                    ul.fs-5.list-group.list-unstyled
+                                        li Lid sedert Maart 2024
+                                        li Favoriete wijn: Grasevina Kutjevo 2019
 
                         .col-lg-4.col-sm-6.mb-5
                             .card.h-100.border-1.shadow-sm
