Lazy loading toegevoegd aan meeste foto's

--- a/src/portretten.pug
+++ b/src/portretten.pug
@@ -32,31 +32,31 @@ html(lang='en')
                 .container.px-4.mt-3
                     .row.pb-5
                         .col-lg-6
-                            img.img-fluid.rounded(width='620px', src='./assets/img/statieportretten/Statieportret2023.jpeg', alt='Statieportret')
+                            img.img-fluid.rounded(loading='lazy' width='620px', src='./assets/img/statieportretten/Statieportret2023.jpeg', alt='Statieportret')
                         .col-lg-6
                             h3.fw-bold.mb-3 Praeses Oosterholt et al. AD 2023
                             .fs-5.mb-4.fst-italic v.l.n.r: Henkemans, Gieling, Mokveld, Koster, Houthuijs, Oosterholt, Damhuis, Bosma, Verkade & Maes.
                     .row.pb-5
                         .col-lg-6
-                            img.img-fluid.rounded(width='620px', src='./assets/img/statieportretten/Statieportret2018.png', alt='Statieportret')
+                            img.img-fluid.rounded(loading='lazy' width='620px', src='./assets/img/statieportretten/Statieportret2018.png', alt='Statieportret')
                         .col-lg-6
                             h3.fw-bold.mb-3 Praeses van Veenendaal et al. AD 2018
                             .fs-5.mb-4.fst-italic v.l.n.r: Maes, Meeles, Damhuis, Meijaard, van Veenendaal, Schepens, Janssen & van Horssen
                     .row.pb-5
                         .col-lg-6
-                            img.img-fluid.rounded(width='620px', src='./assets/img/statieportretten/Statieportret2017.jpeg', alt='Statieportret')
+                            img.img-fluid.rounded(loading='lazy' width='620px', src='./assets/img/statieportretten/Statieportret2017.jpeg', alt='Statieportret')
                         .col-lg-6
                             h3.fw-bold.mb-3 Praeses Meeles et al. AD 2017
                             .fs-5.mb-4.fst-italic v.l.n.r: van Veenendaal, Keltjes, Beekveld, Meeles, Janssen, Schepens, Damhuis & van Horssen
                     .row.pb-5
                         .col-lg-6
-                            img.img-fluid.rounded(width='620px', src='./assets/img/statieportretten/Statieportret2013.png', alt='Statieportret')
+                            img.img-fluid.rounded(loading='lazy' width='620px', src='./assets/img/statieportretten/Statieportret2013.png', alt='Statieportret')
                         .col-lg-6
                             h3.fw-bold.mb-3 Praeses van Beekveld et al. AD 2013
                             .fs-5.mb-4.fst-italic v.l.n.r: Beckers, Ceelen, Schepens, Roobeek, Kerstens, Godtschalk, Zwerts, Timmerman, Verheijen, Fasting, van Zelst, Sanders, Aerts, Nijhuis, Meeles, van Beekveld, Keltjens, van Thiel, Wong
                     .row.pb-5
                         .col-lg-6
-                            img.img-fluid.rounded(width='620px', src='./assets/img/statieportretten/statieportret.png', alt='Statieportret')
+                            img.img-fluid.rounded(loading='lazy' width='620px', src='./assets/img/statieportretten/statieportret.png', alt='Statieportret')
                         .col-lg-6
                             h3.fw-bold.mb-3 Praeses Aerts et al. AD 2008
                             .fs-5.mb-4.fst-italic v.l.n.r: Nijhuis, Roobeek, Verheijen, Timmerman, van Thiel, Aerts, Wong, Zwerts, Sanders
