--- a/src/stukken.pug
+++ b/src/stukken.pug
@@ -201,7 +201,7 @@ html(lang='en')
                         h2#statieportret Statieportret
                         i Dispuut "In Vino Veritas"
                         br
-                        img.img-fluid(src='assets/img/statieportretten/statieportret.png', alt='Statieportret Dispuut "In Vino Veritas"')
+                        img.img-fluid(loading='lazy' src='assets/img/statieportretten/statieportret.png', alt='Statieportret Dispuut "In Vino Veritas"')
 
         // Footer
         include includes/footer
