--- a/src/index.pug
+++ b/src/index.pug
@@ -7,6 +7,7 @@ html(lang='en')
         meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
         meta(name='description', content='Website van Hèt Dispuut "In Vino Veritas"')
         meta(name='author', content='Praeses')
+        meta(http-equiv='Cache-Control' content='public, max-age=604800')
 
         title Dispuut "In Vino Veritas"
 
