feat: functie wisselingen en nieuw lid

--- a/src/index.pug
+++ b/src/index.pug
@@ -84,26 +84,27 @@ html(lang='en')
                     // -------------------- DAGELIJKS BESTUUR --------------------
 
                     .row
-                        .col-lg-4.col-sm-6.mb-5
-                            .card.h-100.border-1.shadow-sm
-                                img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Oosterholt.png?as=avif&width=450')
-                                .card-body.p-4
-                                    h4.fw-bold.card-title.mb-3 Dhr. S.A.J. Oosterholt
-                                    ul.fs-5.list-group.list-unstyled
-                                        li Praeses, tevens Typo3-fanaticus
-                                        li Lid sedert mei 2022
-                                        li Favoriete wijn: Pagus Bisano Amarone della Valpolicella 2018
-                                        p.fst-italic.mt-3.text-center "Praeses van het volk!"
+
                         .col-lg-4.col-sm-6.mb-5
                             .card.h-100.border-1.shadow-sm
                                 img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Mokveld.jpeg?as=avif&width=450')
                                 .card-body.p-4
                                     h4.fw-bold.card-title.mb-3 Dhr. S.A. Mokveld
                                     ul.fs-5.list-group.list-unstyled
-                                        li Ab-Actis, tevens Dux Luxuriae
+                                        li Praeses, tevens Dux Luxuriae
                                         li Lid sedert december 2022
                                         li Favoriete wijn: Onbekend
 
+                        .col-lg-4.col-sm-6.mb-5
+                            .card.h-100.border-1.shadow-sm
+                                img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Oosterholt.png?as=avif&width=450')
+                                .card-body.p-4
+                                    h4.fw-bold.card-title.mb-3 Dhr. S.A.J. Oosterholt
+                                    ul.fs-5.list-group.list-unstyled
+                                        li Ab-Actis, tevens Typo3-fanaticus
+                                        li Lid sedert mei 2022
+                                        li Favoriete wijn: Pagus Bisano Amarone della Valpolicella 2018
+                                        p.fst-italic.mt-3.text-center "Praeses van het volk!"
 
                         .col-lg-4.col-sm-6.mb-5
                             .card.h-100.border-1.shadow-sm
@@ -137,6 +138,16 @@ html(lang='en')
                                         li Lid sedert december 2019
                                         li Favoriete wijn: 2018 Emilio Moro Malleolus Melchior
                                         p.fst-italic.mt-3.text-center "Als de Ab-Actis moet pissen, dan moet de Ab-Actis pissen."
+
+                        .col-lg-4.col-sm-6.mb-5
+                            .card.h-100.border-1.shadow-sm
+                                img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Dijke.jpg?as=avif&height=228', alt='')
+                                .card-body.p-4
+                                    h4.fw-bold.card-title.mb-3 Dhr. vam Dijke
+                                    ul.fs-5.list-group.list-unstyled
+                                        li Kelner
+                                        li Lid sedert april 2024
+                                        li Favoriete wijn: Schouwen-Druiveland Barrique+ 2021
 
                         .col-lg-4.col-sm-6.mb-5
                             .card.h-100.border-1.shadow-sm
@@ -258,7 +269,7 @@ html(lang='en')
                             .card.h-100.border-1.shadow-sm
                                 img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Gieling.png?as=avif&width=450', alt='')
                                 .card-body.p-4
-                                    h4.fw-bold.card-title.mb-3 Dhr. B.W.T. Gieling
+                                    h4.fw-bold.card-title.mb-3 Mgr. B.W.T. Gieling
                                     ul.fs-5.list-group.list-unstyled
                                         li Lid sedert september 2019
                                         li Favoriete wijn ≠ Chardonnay
