--- a/src/index.pug
+++ b/src/index.pug
@@ -143,7 +143,7 @@ html(lang='en')
                             .card.h-100.border-1.shadow-sm
                                 img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Dijke.jpg?as=avif&height=228', alt='')
                                 .card-body.p-4
-                                    h4.fw-bold.card-title.mb-3 Dhr. vam Dijke
+                                    h4.fw-bold.card-title.mb-3 Dhr. vav Dijke
                                     ul.fs-5.list-group.list-unstyled
                                         li Kelner
                                         li Lid sedert april 2024
