--- a/src/index.pug
+++ b/src/index.pug
@@ -122,7 +122,7 @@ html(lang='en')
                                 .card-body.p-4
                                     h4.fw-bold.card-title.mb-3 Dhr. D.P. Verkade
                                     ul.fs-5.list-group.list-unstyled
-                                        li Vice-Praeses, tevens Proclamator, tevens Kelner, tevens Homines-Attributes
+                                        li Vice-Praeses, tevens Proclamator, tevens Homines-Attributes
                                         li Lid sedert november 2021
                                         li Favoriete wijn: Graham's Late Bottled Vintage Port
 
