Lang leven nieuwe P

--- a/src/stukken.pug
+++ b/src/stukken.pug
@@ -75,7 +75,7 @@ html(lang='en')
                         p
                           | Sterk en zelfverzekerd, naar een borrel die ik leid
                           br
-                          | Aan de bar wacht de Heer Houthuijs, de Praeses die ik bemijd
+                          | Aan de bar wacht de Heer Mokveld, de Praeses die ik bemijd
                           br
                           | Samen drinken we de zon achter de sterren
                           br
