feat: new main image

--- a/src/index.pug
+++ b/src/index.pug
@@ -39,8 +39,10 @@ html(lang='en')
                         button(data-bs-target="#carousel" data-bs-slide-to="2" aria-current="true")
                         button(data-bs-target="#carousel" data-bs-slide-to="3" aria-current="true")
                         button(data-bs-target="#carousel" data-bs-slide-to="4" aria-current="true")
+                        button(data-bs-target="#carousel" data-bs-slide-to="5" aria-current="true")
                     .carousel-inner(role='listbox')
-                        .carousel-item.active(style!="background-image: url('./assets/img/carousel/Statieportret2019.gif?as=avif&width=1920')")
+                        .carousel-item.active(style!="background-image: url('./assets/img/carousel/carousel1.jpeg?as=avif&width=1920')")
+                        .carousel-item(style!="background-image: url('./assets/img/carousel/Statieportret2019.gif?as=avif&width=1920')")
                         .carousel-item(style!="background-image: url('./assets/img/carousel/IVV-Spel-Met-Ballen-2023-166942.jpeg?as=avif&width=1920')")
                         .carousel-item(style!="background-image: url('./assets/img/carousel/Praesesportretten.png?as=avif&width=1920')")
                         .carousel-item(style!="background-image: url('./assets/img/carousel/carousel3.gif?as=avif&width=1920')")
