feat: nieuw statieportret

--- a/src/portretten.pug
+++ b/src/portretten.pug
@@ -32,6 +32,12 @@ html(lang='en')
                 .container.px-4.mt-3
                     .row.pb-5
                         .col-lg-6
+                            img.img-fluid.rounded(loading='lazy' width='620px', srcset!='./assets/img/statieportretten/Statieportret2024.jpeg?as=avif&width=620', alt='Statieportret')
+                        .col-lg-6
+                            h3.fw-bold.mb-3 Praeses Mokveld et al. AD 2024
+                            .fs-5.mb-4.fst-italic v.l.n.r: Maes, Oosterholt, Peters, Houthuijs, Mokveld, Verkade, Gieling, van Dijke, Henkemans, Damhuis, Bosma & Koster.
+                    .row.pb-5
+                        .col-lg-6
                             img.img-fluid.rounded(loading='lazy' width='620px', srcset!='./assets/img/statieportretten/Statieportret2023.jpeg?as=avif&width=620', alt='Statieportret')
                         .col-lg-6
                             h3.fw-bold.mb-3 Praeses Oosterholt et al. AD 2023
