feat: add OpenGraph tags

--- a/src/index.pug
+++ b/src/index.pug
@@ -9,6 +9,10 @@ html(lang='en')
         meta(name='author', content='Praeses')
         meta(http-equiv='Cache-Control' content='public, max-age=604800')
 
+        meta(property="og:title" content="Dispuut 'In Vino Veritas'")
+        meta(property="og:description" content="Website van Hèt Dispuut 'In Vino Veritas'")
+        meta(property="og:image" content="./assets/wapenzonderachtergrond.png")
+
         title Dispuut "In Vino Veritas"
 
         // Favicon
